--- a/app/src/main/res/layout/list_card.xml
+++ b/app/src/main/res/layout/list_card.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="98dp"
+    android:layout_width="96dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
@@ -16,16 +16,17 @@
         android:gravity="center">
 
         <ImageView
+            android:layout_marginTop="4dp"
             android:id="@+id/imageView"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:scaleType="centerCrop"/>
 
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="Title"
             android:textColor="@color/dark_grey"
             android:textStyle="bold"
@@ -47,7 +48,7 @@
             android:layout_height="wrap_content"
             android:maxWidth="80dp"
             android:paddingTop="5dp"
-            android:textSize="14sp"
+            android:textSize="13sp"
             android:text="+49.23%"
             android:textColor="@color/green"
             android:textAlignment="center"/>
