--- a/app/src/main/res/drawable/ic_diamond.xml
+++ b/app/src/main/res/drawable/ic_diamond.xml
@@ -1,4 +1,4 @@
-<vector android:height="24dp" android:tint="@color/blue"
+<vector android:height="24dp" android:tint="@color/yellow"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M12.16,3l-0.32,0l-2.63,5.25l5.58,0z"/>
