--- a/app/src/main/res/layout/your_dashboard_card.xml
+++ b/app/src/main/res/layout/your_dashboard_card.xml
@@ -53,6 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewPager"
+        app:layout_constraintVertical_bias="1.0"
         app:tabBackground="@drawable/dashboard_tab_backgroud"
         app:tabIndicator="@null"
         app:tabTextColor="@color/white" />
